[CMLG-013] Fix problems for select column/table and add hide hearder bar functionality to mobile view(#50)
Issue:
The user needs to click twice on the select column button to see the checklist. We can't see the horizontal scroll bar and use the mouse to scroll the table. And we need to click twice in the mobile view to hide the header bar, which is not a regular behavior, it should automatically close when we switch to other pages.

Solution: 
Use state to check if the select column component is clicked. Then use ref to store the current node, when the user clicks anywhere, the select column component will hide. Also use the ref for the mobile view header bar component, when the user clicks anywhere else the header bar will close. Change header bar scroll hidden to scroll-y hidden in order to fix the problem that the table can't scroll horizontally.

Risk:
Unknown

Reviewed by:
Kevin, Emily, Yujia, Annie, Dave

--- a/src/components/css/SelectCol.css
+++ b/src/components/css/SelectCol.css
@@ -9,15 +9,16 @@
 
 .card {
     width: 10rem;
-    display: none;
     padding-left: 10px;
     padding-bottom:10px;
     position: fixed;
     top: 15%;
     right: 16px;
+    z-index: 1000;
     /*overflow:"auto"*/
 }
 
-#language-options {
-    z-index: 1000;
+#card-title {
+    color: grey;
+    padding-top: 8px;
 }
